Tue Apr 15 16:30:30 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:
        * orbsvcs/tests/Security/BiDirectional/server.cpp:
          fuzz fix.

        * orbsvcs/tests/Notify/Bug_3646c_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646c_Regression/server.cpp:
          more wchar scoreboard cleanup.

Tue Apr 15 15:11:48 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:
        * orbsvcs/tests/Trading/export_test.cpp:
        * orbsvcs/tests/Trading/run_test.pl:
          more wchar scoreboard cleanup.

Mon Apr 14 16:11:02 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp:
          Fix wchar + ipv6 compile error.

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Acceptor.cpp:
          Fix wchar debug output

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:
          Wchar parameter parsing requires the use of an intermediate
          string buffer.

        * orbsvcs/tests/Security/BiDirectional/client.cpp:
        * orbsvcs/tests/Security/BiDirectional/server.cpp:
        * orbsvcs/tests/Security/MT_SSLIOP/server.cpp:
        * orbsvcs/tests/Security/mixed_security_test/client.cpp:
          Fix wchar debug output.

        * tests/AMI/run_exclusive_rw.pl:
          Enhance debug output.

Mon Apr 14 13:19:14 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Trading/run_test.pl:
          The corresponding fix to the script to give the correct
          ready file name to the exporter.

Fri Apr 11 21:38:18 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Trading/TT_Info.cpp:
          Fix the skipping of unprocessed args so downstream functions
          can have a go. This may be related to the scoreboard failures
          but probably not.
